fix chat